Use workspace dependencies for imxrt-rs deps
Requires Cargo 1.64. This allows us to manage the imxrt-rs first-party
dependencies in one place. We only have to update the version in one
place. Additionally, re-locate some package metadata in the workspace so
it can be easily shared with imxrt-log.

--- a/board/Cargo.toml
+++ b/board/Cargo.toml
@@ -7,26 +7,24 @@ publish = false
 
 [dependencies.imxrt-hal]
 path = ".."
-version = "0.5.0-alpha"
 
 [dependencies.imxrt-iomuxc]
-version = "0.2"
+workspace = true
 
 [dependencies.imxrt-ral]
-version = "0.5"
+workspace = true
 
 [dependencies.imxrt-rt]
-version = "0.1"
+workspace = true
 
 [build-dependencies.imxrt-rt]
-version = "0.1"
+workspace = true
 
 [dependencies.imxrt-log]
-version = "0.1"
 path = "../logging"
 
 [dependencies.imxrt-usbd]
-version = "0.1"
+workspace = true
 
 [dependencies.cortex-m]
 version = "0.7"
