--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcint
 description = """
 Hardware abstraction layer for NXP i.MX RT microcontrollers.
 """
-repository = "https://github.com/imxrt-rs/imxrt-hal"
 readme = "README.md"
-keywords = ["imxrt", "nxp", "embedded", "no_std", "embedded-hal"]
-categories = ["embedded", "no-std"]
-license = "MIT OR Apache-2.0"
+repository = { workspace  = true }
+keywords = { workspace  = true }
+categories = { workspace  = true }
+license = { workspace  = true }
 edition = "2018"
 version = "0.5.0-alpha"
 
@@ -45,13 +45,13 @@ version = "0.1"
 #######################
 
 [dependencies.imxrt-iomuxc]
-version = "0.2"
+workspace = true
 
 [dependencies.imxrt-ral]
-version = "0.5"
+workspace = true
 
 [dependencies.imxrt-usbd]
-version = "0.1"
+workspace = true
 optional = true
 
 [package.metadata.docs.rs]
@@ -83,6 +83,18 @@ members = [
     "logging",
 ]
 
+[workspace.dependencies]
+imxrt-iomuxc = "0.2"
+imxrt-ral = "0.5"
+imxrt-rt = "0.1"
+imxrt-usbd = "0.1"
+
+[workspace.package]
+repository = "https://github.com/imxrt-rs/imxrt-hal"
+keywords = ["imxrt", "nxp", "embedded", "no_std", "embedded-hal"]
+categories = ["embedded", "no-std"]
+license = "MIT OR Apache-2.0"
+
 [profile.dev]
 opt-level = 1
 panic = "abort"
@@ -106,10 +118,10 @@ codegen-units = 256
 
 [dev-dependencies]
 board = { path = "board" }
-imxrt-rt = "0.1"
+imxrt-rt = { workspace = true }
 menu = "0.3.2"
 cortex-m-rtic = "1.0"
-imxrt-ral = "0.5"
+imxrt-ral = { workspace = true }
 log = "0.4"
 defmt = "0.3"
 imxrt-log = { path = "logging" }
