Add timer abstractions for eh02 implementations
Should also suffice for the eh1 traits.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,14 @@ version = "1.0"
 [dependencies.bitflags]
 version = "1.2"
 
+[dependencies.fugit]
+version = "0.3"
+
+# For EH02 CountDown.
+[dependencies.void]
+version = "1"
+default-features = false
+
 [dependencies.nb]
 version = "1"
 
