--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,7 @@ members = [
 [workspace.dependencies]
 imxrt-iomuxc = "0.2"
 imxrt-hal = { path = "." }
+imxrt-log = { path = "logging" }
 imxrt-ral = "0.5"
 imxrt-rt = "0.1"
 imxrt-usbd = "0.1"
@@ -129,7 +130,6 @@ cortex-m-rtic = "1.0"
 imxrt-ral = { workspace = true }
 log = "0.4"
 defmt = "0.3"
-imxrt-log = { path = "logging" }
 
 [[example]]
 name = "async_dma_spi"
@@ -142,6 +142,22 @@ required-features = ["board/spi"]
 [[example]]
 name = "rtic_spi"
 required-features = ["board/spi"]
+
+[[example]]
+name = "hal_logging"
+required-features = ["board/imxrt-log"]
+
+[[example]]
+name = "hal_tempmon"
+required-features = ["board/imxrt-log"]
+
+[[example]]
+name = "hal_trng"
+required-features = ["board/imxrt-log"]
+
+[[example]]
+name = "rtic_logging"
+required-features = ["board/imxrt-log"]
 
 [patch.crates-io]
 imxrt-iomuxc =  { git = "https://github.com/mciantyre/imxrt-iomuxc" }
