--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -89,6 +89,7 @@ jobs:
         - --example=hal_spi --example=rtic_spi --example=async_dma_spi --features=board/imxrt1170evk-cm7,board/spi
         # The i.MX RT 1170 EVK (CM7) target is WIP. The list below describes the working examples.
         - --features=board/imxrt1170evk-cm7,board/lcd1602 --example=hal_led
+          --example=hal_gpio_input --example=rtic_gpio_input
           --example=hal_uart --example=rtic_uart --example=rtic_dma_uart --example=async_dma_uart
           --example=hal_gpt --example=rtic_gpt
           --example=hal_pit --example=rtic_pit
