--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ version = "0.2.6"
 package = "embedded-hal"
 version = "1.0.0"
 
-[dependencies.ecan]
+[dependencies.embedded_can]
 package = "embedded-can"
 version = "0.4.1"
 
