Prototype a FlexCAN peripheral
Implementation of the FlexCAN1 and FlexCAN2 peripherals for the  NXP i.MX RT 1060 processor.

Includes APIs for initializing the peripherals, setting the clock source, setting mailbox receive filters, setting mailbox FIFO functionality, and receiving and transmitting frames.

The FlexCAN3 peripheral is not implemented.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,10 @@ version = "0.2.6"
 package = "embedded-hal"
 version = "1.0.0"
 
+[dependencies.ecan]
+package = "embedded-can"
+version = "0.4.1"
+
 [dependencies.eio06]
 package = "embedded-io"
 version = "0.6.1"
