Target latest, stable Rust toolchain in CI
Previously using whatever was available on the runner. We don't have an
MSRV policy for the 0.4 series, so we're sticking with the latest,
stable compiler, recognizing that this could break some use-cases.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,6 +10,8 @@ jobs:
         feature: ["imxrt1061", "imxrt1062", "imxrt1064"]
     steps:
     - uses: actions/checkout@v2
+    - name: Install lastest, stable Rust toolchain
+      run: rustup toolchain install stable --profile=minimal --component=clippy,rustfmt
     - name: Build imxrt-hal for (${{ matrix.feature }}) HAL
       run: cd imxrt-hal && cargo build --verbose --features ${{ matrix.feature }}
     - name: Run tests (${{ matrix.feature }}) for HAL
