--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -84,9 +84,11 @@ jobs:
         # Boards that support all examples, and should build with additional drivers.
         - --examples --features=board/teensy4,board/lcd1602
         - --examples --features=board/imxrt1010evk,board/lcd1602
+        - --examples --features=board/imxrt1060evk,board/lcd1602
         # SPI examples (might break other examples)
         - --example=hal_spi --example=rtic_spi --example=async_dma_spi --features=board/teensy4,board/spi
         - --example=hal_spi --example=rtic_spi --example=async_dma_spi --features=board/imxrt1010evk,board/spi
+        - --example=hal_spi --example=rtic_spi --example=async_dma_spi --features=board/imxrt1060evk,board/spi
         - --example=hal_spi --example=rtic_spi --example=async_dma_spi --features=board/imxrt1170evk-cm7,board/spi
         # The i.MX RT 1170 EVK (CM7) target is WIP. The list below describes the working examples.
         - --features=board/imxrt1170evk-cm7,board/lcd1602 --example=hal_led
