--- a/board/Cargo.toml
+++ b/board/Cargo.toml
@@ -66,6 +66,10 @@ features = ["cortex-m"]
 version = "0.1"
 optional = true
 
+[target.thumbv7em-none-eabihf.dependencies.imxrt1060evk-fcb]
+version = "0.1"
+optional = true
+
 [target.thumbv7em-none-eabihf.dependencies.imxrt1170evk-fcb]
 version = "0.1"
 optional = true
@@ -76,6 +80,15 @@ imxrt1010evk = [
     "imxrt-ral/imxrt1011",
     "imxrt-hal/imxrt1010",
     "imxrt1010evk-fcb",
+    "rtt-target",
+    "panic-rtt-target",
+    "imxrt-log",
+]
+imxrt1060evk = [
+    "imxrt-iomuxc/imxrt1060",
+    "imxrt-ral/imxrt1062",
+    "imxrt-hal/imxrt1060",
+    "imxrt1060evk-fcb",
     "rtt-target",
     "panic-rtt-target",
     "imxrt-log",
