--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -55,6 +55,7 @@ jobs:
       matrix:
         chips:
         - imxrt-ral/imxrt1011,imxrt1010
+        - imxrt-ral/imxrt1021,imxrt1020
         - imxrt-ral/imxrt1061,imxrt1060
         - imxrt-ral/imxrt1062,imxrt1060
         - imxrt-ral/imxrt1064,imxrt1060
@@ -130,6 +131,7 @@ jobs:
       matrix:
         chips:
         - imxrt-ral/imxrt1011,imxrt1010
+        - imxrt-ral/imxrt1021,imxrt1020
         - imxrt-ral/imxrt1062,imxrt1060
         - imxrt-ral/imxrt1176_cm7,imxrt1170
     runs-on: ubuntu-latest
