--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,13 +123,15 @@ codegen-units = 256
 
 [dev-dependencies]
 cortex-m = "0.7"
-board = { path = "board" }
 imxrt-rt = { workspace = true }
 menu = "0.3.2"
 cortex-m-rtic = "1.0"
 log = "0.4"
 defmt = "0.3"
 pin-utils = "0.1"
+
+[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
+board = { path = "board" }
 
 [[example]]
 name = "async_dma_spi"
