Add usb-device test-class example
It's a port of the imxrt-usbd example, which only worked on a Teensy 4.
This allows us to execute the usb-device test harness across multiple
boards. Notes at the top of the example indicate how to run the hardware
tests.

The runtime configuration influences the bulk read / write throughput.
As of this commit, I'm configuring the i.MXRT1010EVK to perform the best
in this benchmark game. Here's the 1010EVK bulk read / write results:

  test bench_bulk_write ... ok
    16 transfers of 65536 bytes in 0.045s -> 187.791Mbit/s
  test bench_bulk_read ... ok
    16 transfers of 65536 bytes in 0.070s -> 120.269Mbit/s

And here are the results for the Teensy 4 running the same example:

  test bench_bulk_write ... ok
    16 transfers of 65536 bytes in 0.089s -> 93.981Mbit/s
  test bench_bulk_read ... ok
    16 transfers of 65536 bytes in 0.125s -> 67.288Mbit/s

By default, the runtime places most data sections (.data, .uninit, .bss)
into OCRAM. Moving these into DTCM means the CPU can more quickly copy
TestClass buffers (placed in .uninit by RTIC) to / from endpoint memory
buffers (.bss). I'm just speculating that CPU copying is a bottleneck;
haven't actually measured anything else besides these tests. All this to
say: if you want to reproduce the best results, try playing with your
runtime configuration.

I loaded this example onto a Teensy 4, 1010EVK, and 1170EVK. They all
passed the usb-device test suite. I ran the test harness on my macOS
host. I then compiled the test harness for a Raspberry Pi, connected my
1010EVK and Teensy 4 to that Linux host, and re-ran the tests. All tests
still passed.

Tested both debug and release builds on the Teensy 4; release-only on
the 1010EVK; debug-only on the 1170EVK.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -100,7 +100,7 @@ jobs:
           --example=hal_clock_out
           --example=hal_pwm --example=rtic_pwm
           --example=hal_i2c_mpu9250 --example=hal_i2c_lcd1602
-          --example=rtic_usb_serial
+          --example=rtic_usb_serial --example=rtic_usb_test_class
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
