--- a/Cargo.toml
+++ b/Cargo.toml
@@ -130,7 +130,7 @@ cortex-m-rtic = "1.0"
 log = "0.4"
 defmt = "0.3"
 pin-utils = "0.1"
-usb-device = "0.2"
+usb-device = { version = "0.2", features = ["test-class-high-speed"] }
 usbd-serial = "0.1"
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
