Add USB HID mouse / keypress hardware example
Works as advertised on a 1010EVK, Teensy 4, and 1170EVK. The example
uses a USB GPT to rate limit the reports sent to the host.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -132,6 +132,7 @@ defmt = "0.3"
 pin-utils = "0.1"
 usb-device = { version = "0.2", features = ["test-class-high-speed"] }
 usbd-serial = "0.1"
+usbd-hid = "0.6"
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
 board = { path = "board" }
