Enable overflow checks in release mode
Experience developing in imxrt-usbd shows that this can help catch
programming errors. I compiled release builds for all examples requiring
limited hardware (basically, excluded I2C tests, and the PWM example
that requires a scope to see the output), and I ran them all on my
1010EVK. Nothing panicked, and examples seemed to work as expected.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,6 +109,7 @@ panic = "abort"
 opt-level = "z"
 lto = "fat"
 panic = "abort"
+overflow-checks = true
 
 [profile.dev.build-override]
 opt-level = 0
