Add CI test for 1015 chips in imxrt-ral
Noted as missing in a recent PR. We're expecting all imxrt-ral chips to
work with imxrt-hal, so this should be included.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,7 @@ jobs:
       matrix:
         chips:
         - imxrt-ral/imxrt1011
+        - imxrt-ral/imxrt1015
         - imxrt-ral/imxrt1021
         - imxrt-ral/imxrt1051
         - imxrt-ral/imxrt1052
