Use defmt-rtt and panic-probe for evk boards
The evk boards have a built in debug probe. When running firmware with probe-rs
defmt-rtt provides a very fast channel of low cost debug println's that everyone
finds really helpful.

Using panic-probe with defmt-rtt has a second benefit in allowing for programs to
inform probe-rs the firmware has exited cleanly. This can be used for writing samples
and tests that exit.

This also makes the imxrt-log defmt feature optional to the boards otherwise
the two implementations of the defmt logger cause duplicate symbols to show up.

Tested on an 1010evk and 1060evk.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,7 +89,7 @@ members = [
 imxrt-dma = "0.1"
 imxrt-iomuxc = "0.2.1"
 imxrt-hal = { version = "0.5", path = "." }
-imxrt-log = { path = "logging" }
+imxrt-log = { path = "logging", default-features = false, features = ["log", "lpuart", "usbd"] }
 imxrt-ral = "0.5"
 imxrt-rt = "0.1"
 imxrt-usbd = "0.2"
@@ -165,6 +165,9 @@ required-features = ["board/imxrt-log"]
 [[example]]
 name = "rtic_logging"
 required-features = ["board/imxrt-log"]
+
+[[example]]
+name = "rtic_defmt_rtt"
 
 [[example]]
 name = "hal_i2c_lcd1602"
