--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,4 +4,5 @@ rustflags = [
     "-C", "link-arg=-Tdefmt.x",
     "-C", "link-arg=-Tdevice.x",
     "-C", "link-arg=-error-limit=0",
+    "-C", "link-arg=-nmagic",
 ]
