Detect imxrt-log's defmt feature in board builds
We can't detect a dependency's features in our build. We can show this
by modifying the rtic_logging example to use the Frontend::Defmt
frontend, then building the example for a Teensy 4. The example fails to
build.

We can only detect our own features in our build. Add a board feature
that we can enable for a board, and rewrite the conditional includes to
use the feature.

--- a/board/Cargo.toml
+++ b/board/Cargo.toml
@@ -112,7 +112,7 @@ teensy4 = [
     "teensy4-fcb",
     "teensy4-panic",
     "imxrt-log",
-    "imxrt-log/defmt",
+    "logging-defmt",
 ]
 imxrt1170evk-cm7 = [
     "imxrt-iomuxc/imxrt1170",
@@ -123,6 +123,7 @@ imxrt1170evk-cm7 = [
     "panic-probe",
     "imxrt-log",
 ]
+logging-defmt = ["imxrt-log/defmt"]
 
 # Some boards (Teensy 4) require a resource
 # configuration to enable the (easily accessible)
