--- a/Cargo.toml
+++ b/Cargo.toml
@@ -144,6 +144,7 @@ cortex-m = "0.7"
 imxrt-rt = { workspace = true }
 menu = "0.4.0"
 rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
+rtic-monotonics = { version = "1.2.0", features = ["cortex-m-systick"] }
 log = "0.4"
 defmt = "0.3"
 pin-utils = "0.1"
