--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,9 @@ optional = true
 [dependencies.rtic-sync]
 version = "1.0.2"
 
+[dependencies.cortex-m]
+version = "0.7"
+
 #######################
 # imxrt-rs dependencies
 #######################
@@ -141,7 +144,6 @@ codegen-units = 256
 ######################################
 
 [dev-dependencies]
-cortex-m = "0.7"
 imxrt-rt = { workspace = true }
 menu = "0.4.0"
 rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
