--- a/Cargo.toml
+++ b/Cargo.toml
@@ -147,13 +147,17 @@ codegen-units = 256
 imxrt-rt = { workspace = true }
 menu = "0.4.0"
 rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
-rtic-monotonics = { version = "1.2.0", features = ["cortex-m-systick"] }
+rtic-monotonics = { version = "1.2.0", features = [
+    "cortex-m-systick",
+    "embedded-hal-async",
+] }
 log = "0.4"
 defmt = "0.3"
 pin-utils = "0.1"
 usb-device = { version = "0.2", features = ["test-class-high-speed"] }
 usbd-serial = "0.1"
 usbd-hid = "0.6"
+embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
 board = { path = "board" }
@@ -168,7 +172,7 @@ required-features = ["board/spi"]
 
 [[example]]
 name = "rtic_spi"
-required-features = ["board/spi"]
+#required-features = ["board/spi"]
 
 [[example]]
 name = "hal_logging"
