More rework; split data into dma and non-dma parts. To be determined if byte order is correct.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,9 @@ version = "1.0.2"
 [dependencies.cortex-m]
 version = "0.7"
 
+[dependencies.cassette]
+version = "0.2.3"
+
 #######################
 # imxrt-rs dependencies
 #######################
