Expose ENET through 1170EVK
It's the ENET instance that does not support 1Gbit operation. The PHY
reset and configuration is hard-coded into the board module, and it's
fixing the PHY for 10Mbit/s operation. If I go faster, the receive
pathway doesn't work (but the transmit pathway seems fine). One thing
I'd like to rule out is the clock quality; bringing up the ENET PLL is a
TODO.

--- a/board/Cargo.toml
+++ b/board/Cargo.toml
@@ -5,6 +5,9 @@ edition = { workspace = true }
 # Only for testing, documentation.
 publish = false
 
+[dependencies.bitflags]
+version = "1.2"
+
 [dependencies.defmt]
 version = "0.3"
 
@@ -53,6 +56,12 @@ version = "0.2"
 [dependencies.lcd_1602_i2c]
 version = "0.3"
 optional = true
+
+[dependencies.smoltcp]
+version = "0.10.0"
+optional = true
+default-features = false
+features = ["socket-tcp", "socket-dhcpv4"]
 
 # knurling-rs style defmt-rtt with panic-probe
 [target.thumbv7em-none-eabihf.dependencies.defmt-rtt]
@@ -123,6 +132,7 @@ imxrt1170evk-cm7 = [
     "defmt-rtt",
     "panic-probe",
     "imxrt-log",
+    "enet",
 ]
 logging-defmt = ["imxrt-log/defmt"]
 
@@ -133,5 +143,6 @@ logging-defmt = ["imxrt-log/defmt"]
 #
 # See board-specific documentation for its effects.
 spi = []
+enet = ["dep:smoltcp"]
 
 lcd1602 = ["dep:lcd_1602_i2c"]
