Update to imxrt-usbd 0.3
The update requires us to adopt usb-device 0.3 and its associated
dependencies. All USB examples, including rtic_logging, worked as
expected on a Teensy 4.0. We're still passing the usb-device TestClass
test suite on both a Teensy 4 and a 1010EVK.

--- a/board/Cargo.toml
+++ b/board/Cargo.toml
@@ -30,6 +30,7 @@ default-features = false
 
 [dependencies.imxrt-usbd]
 workspace = true
+features = ["defmt-03"]
 
 [dependencies.cortex-m]
 version = "0.7"
