--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
 channel = "nightly"
 # components = ["rustfmt", "llvm-tools"]
-targets = ["thumbv7em-none-eabihf"]
+# targets = ["thumbv7em-none-eabihf"]
