Add simple tool for TCP loopback testing
Monitor your board's serial log for the IP address it's assigned. Then,
pass it into this command-line tool to make sure you can connect, send a
message, and receive the response.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,7 +106,7 @@ imxrt1170 = ["imxrt-iomuxc/imxrt1170", "imxrt-enet"]
 eh02-unproven = []
 
 [workspace]
-members = ["board", "logging"]
+members = ["board", "logging", "tools"]
 
 [workspace.dependencies]
 imxrt-dma = "0.1"
