--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,9 @@ version = "0.3.11"
 default-features = false
 features = ["async-await"]
 
+[dependencies.log]
+version = "0.4"
+
 #######################
 # imxrt-rs dependencies
 #######################
