Refactor LPSPI with word packing, futures
Instead of using LPSPI continuous transactions, we pack the user's data
into u32 words. The primitives for translating the user's data to / from
the data FIFOs should help us as we consider async LPSPI drivers. And,
in order to implement embedded-hal 1.0 traits, we'll need something like
the dummy transmit / receive helpers, since we need to handle differing
transmit / receive buffer sizes. The included unit tests don't trigger
an error in Miri, and they try to simulate how we'd use the primitives
in firmware. (This is an "it's not obviously wrong" test, not an "it's
correct" test; help me review here.)

The commit introduces spinning futures into the LPSPI driver. By
combining and spinning on these futures, we can realize in-place
transfers, read-only transactions, write-only transactions, etc. These
implementations flush the FIFOs, allowing users to synchronize external
components with LPSPI I/O.

We no longer return the Busy error; we'll wait for transmit FIFO space.
We also never return the NoData error, instead returning success when
there's no I/O to do. Since this commit is a non-breaking change, the
two errors are still available in the error enum. I'll remove them
later.

I'm moving the blocking SPI example into RTIC and rewriting the driver
test. The tests demonstrate overlapping writes, writes with flushes, and
in-place transfers with a physical loopback. There's also tests that
show how word sizes and bit orders interact. I'd appreciate if folks
could test these changes in their system, since it affects how the
embedded-hal implementations behave. I'm only testing this commit on a
1170EVK with the new example.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,11 @@ default-features = false
 [dependencies.nb]
 version = "1"
 
+[dependencies.futures]
+version = "0.3.30"
+default-features = false
+features = ["async-await"]
+
 [dependencies.eh02]
 package = "embedded-hal"
 version = "0.2"
@@ -155,7 +160,7 @@ name = "async_dma_spi"
 required-features = ["board/spi"]
 
 [[example]]
-name = "hal_spi"
+name = "rtic_spi_blocking"
 required-features = ["board/spi"]
 
 [[example]]
