Reformat Cargo.toml files
Using default settings of the "Even Better TOML" VSCode plugin, because
that's what's available. board/Cargo.toml had no changes. I excluded the
.cargo/config.toml changes; I prefer the file as-is versus putting every
string on its own line.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "imxrt-hal"
-authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
+authors = [
+    "Tom Burdick <tom.burdick@electromatic.us>",
+    "Ian McIntyre <ianpmcintyre@gmail.com>",
+]
 description = """
 Hardware abstraction layer for NXP i.MX RT microcontrollers.
 """
 readme = "README.md"
-repository = { workspace  = true }
-keywords = { workspace  = true }
-categories = { workspace  = true }
-license = { workspace  = true }
+repository = { workspace = true }
+keywords = { workspace = true }
+categories = { workspace = true }
+license = { workspace = true }
 edition = { workspace = true }
 version = "0.5.4"
 
@@ -80,16 +83,17 @@ imxrt1170 = ["imxrt-iomuxc/imxrt1170"]
 eh02-unproven = []
 
 [workspace]
-members = [
-    "board",
-    "logging",
-]
+members = ["board", "logging"]
 
 [workspace.dependencies]
 imxrt-dma = "0.1"
 imxrt-iomuxc = "0.2.1"
 imxrt-hal = { version = "0.5", path = "." }
-imxrt-log = { path = "logging", default-features = false, features = ["log", "lpuart", "usbd"] }
+imxrt-log = { path = "logging", default-features = false, features = [
+    "log",
+    "lpuart",
+    "usbd",
+] }
 imxrt-ral = "0.5"
 imxrt-rt = "0.1"
 imxrt-usbd = "0.2"
