--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -57,6 +57,8 @@ jobs:
         chips:
         - imxrt-ral/imxrt1011,imxrt1010
         - imxrt-ral/imxrt1021,imxrt1020
+        - imxrt-ral/imxrt1051,imxrt1050
+        - imxrt-ral/imxrt1052,imxrt1050
         - imxrt-ral/imxrt1061,imxrt1060
         - imxrt-ral/imxrt1062,imxrt1060
         - imxrt-ral/imxrt1064,imxrt1060
@@ -136,6 +138,7 @@ jobs:
         chips:
         - imxrt-ral/imxrt1011,imxrt1010
         - imxrt-ral/imxrt1021,imxrt1020
+        - imxrt-ral/imxrt1052,imxrt1050
         - imxrt-ral/imxrt1062,imxrt1060
         - imxrt-ral/imxrt1176_cm7,imxrt1170
     runs-on: ubuntu-latest
