--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ features = ["imxrt-ral/imxrt1062", "imxrt1060"]
 default = ["imxrt-usbd"]
 imxrt1010 = ["imxrt-iomuxc/imxrt1010"]
 imxrt1020 = ["imxrt-iomuxc/imxrt1020"]
+imxrt1050 = ["imxrt-iomuxc/imxrt1050"]
 imxrt1060 = ["imxrt-iomuxc/imxrt1060"]
 imxrt1064 = ["imxrt-iomuxc/imxrt1060"]
 imxrt1170 = ["imxrt-iomuxc/imxrt1170"]
