--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,10 @@ version = "0.2"
 package = "embedded-hal"
 version = "1.0.0"
 
+[dependencies.eio06]
+package = "embedded-io"
+version = "0.6.1"
+
 [dependencies.rand_core]
 version = "0.5"
 default-features = false
