--- a/board/Cargo.toml
+++ b/board/Cargo.toml
@@ -61,7 +61,7 @@ optional = true
 version = "0.10.0"
 optional = true
 default-features = false
-features = ["socket-tcp", "socket-udp", "socket-dhcpv4"]
+features = ["socket-tcp", "socket-udp", "socket-dhcpv4", "defmt"]
 
 # knurling-rs style defmt-rtt with panic-probe
 [target.thumbv7em-none-eabihf.dependencies.defmt-rtt]
