Demonstrate basic LPSPI peripheral support
Use `set_peripheral_enable` to transition the LPSPI driver from a
controller into a peripheral. You can then use the lower-level LPSPI
interface to coordinate I/O.

The commit includes two examples that you can run on
physically-connected boards. See the example documentation for more
info. I tested the LPSPI device behavior by running the `_peripheral`
example on a 1010EVK and the `_controller` example on a 1170EVK. I'm
eagerly updating the pin configurations for other boards.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,6 +127,7 @@ opt-level = "z"
 lto = "fat"
 panic = "abort"
 overflow-checks = true
+debug = 2
 
 [profile.dev.build-override]
 opt-level = 0
@@ -161,6 +162,14 @@ required-features = ["board/spi"]
 
 [[example]]
 name = "rtic_spi_blocking"
+required-features = ["board/spi"]
+
+[[example]]
+name = "rtic_spi_controller"
+required-features = ["board/spi"]
+
+[[example]]
+name = "rtic_spi_peripheral"
 required-features = ["board/spi"]
 
 [[example]]
