--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,7 +145,7 @@ codegen-units = 256
 cortex-m = "0.7"
 imxrt-rt = { workspace = true }
 menu = "0.3.2"
-cortex-m-rtic = "1.0"
+rtic = { version = "2.0", features = ["thumbv7-backend"] }
 log = "0.4"
 defmt = "0.3"
 pin-utils = "0.1"
