--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ version = "0.5.5"
 version = "1.0"
 
 [dependencies.bitflags]
-version = "1.2"
+version = "1.3"
 
 [dependencies.fugit]
 version = "0.3"
@@ -39,7 +39,7 @@ features = ["async-await"]
 
 [dependencies.eh02]
 package = "embedded-hal"
-version = "0.2"
+version = "0.2.6"
 
 [dependencies.eh1]
 package = "embedded-hal"
@@ -53,6 +53,12 @@ version = "0.6.1"
 version = "0.5"
 default-features = false
 optional = true
+
+# This is an indirect dependency through imxrt-ral;
+# imxrt-ral depends on `ral-registers 0.1.0`,
+# but we are using newer features.
+[dependencies.ral-registers]
+version = "0.1.3"
 
 #######################
 # imxrt-rs dependencies
