Patch usbd-hid-macros development dependency
Our usbd-hid 0.6 development dependency no longer builds. See the
upstream issue tracker for details. This affects the USB HID examples we
maintain in this repository.

This commit patches the development dependency so our examples still
build. Note that this only affects examples that demonstrate imxrt-hal
0.5; another breaking change fixes the issue by updating the development
dependency.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -204,3 +204,7 @@ name = "rtic_defmt_rtt"
 [[example]]
 name = "hal_i2c_lcd1602"
 required-features = ["board/lcd1602"]
+
+[patch.crates-io.usbd-hid-macros]
+git = "https://github.com/imxrt-rs/usbd-hid.git"
+branch = "patch-imxrt-hal-0.5"
